# flowagent

./: .cgat.yml  .env.example  .gitignore  404.html  LICENSE  README.md  env.example  environment.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  smart_resume_README.md  test_api_usage.py
.chainlit/: config.toml
benchmarking/: index.html
benchmarks/: =  =1.9.0  Makefile  README.md  bench_competitors.py  bench_executors.py  bench_fidelity.py  bench_fidelity_run.py  bench_generation.py  bench_interpretation.py  bench_planning.py  bench_recovery.py  merge_runs.py  pyproject.toml  recovery_taxonomy.py  rescore_planning.py  supp_table_models.py
benchmarks/case_study/: README.md  pca_volcano.R  timeline.py
benchmarks/config/: faults.yaml  fidelity_cases.yaml  interpretation_questions.yaml  models.yaml
benchmarks/corpus/: prompts.yaml
benchmarks/flowagent_output/Unnamed_Workflow/: workflow.json
benchmarks/harness/: __init__.py  autoba_shim.py  biomaster_shim.py  competitors.py  env_detect.py  executor_probes.py  fault_inject.py  fidelity_metrics.py  metrics.py  mock_plans.py  plot.py  runner.py
benchmarks/references/: .gitignore  README.md  counts_tsv_to_bed.py  download_references.py  install_r_deps.R  macs_txt_to_bed.py  make_reference_gse152418.R  make_reference_gse52778.R  make_reference_gse60450.R  subset_giab_chr20.sh
benchmarks/tests/: test_competitors.py  test_metrics.py
changelog/: index.html
cognomic/: api.py  cli.py  web.py  workflow.py
cognomic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
contributing/: index.html
custom_scripts/: index.html
data/: default_protocols.json  tool_documentation.json
docs/: benchmarking.md  changelog.md  contributing.md  index.md
examples/: run_benchmark.py
flowagent/: __init__.py  api.py  cli.py  web.py  workflow.py
public/: custom.js  (+1 more)
(+237 files in other folders)
